# SSNN

./: .gitignore  README.md  pyproject.toml
notebooks/: clt_convergence.ipynb  ef2_correction_study.ipynb  interaction_diagnostics.ipynb  interaction_study.ipynb  plot_results.py  pumas_validation.ipynb  simulation_results.json  simulation_study.ipynb
src/ssnn/: __init__.py  activations.py  baselines.py  cross_block_optimizer.py  cross_block_risk.py  cross_block_stats.py  cumulants.py  edgeworth_integrals.py  edgeworth_optimizer.py  edgeworth_risk.py  error_analysis.py  gamma_denoising.py  gaussian_integrals.py  genome_wide_optimizer.py  interaction_init.py  interaction_integrals.py  interaction_optimizer.py  interaction_risk.py  optimizer.py  population_risk.py  pumas.py  pumas_validation.py  residual_gamma.py  robust_interaction_optimizer.py  simulation.py  utils.py
tests/: conftest.py  test_activations.py  test_baselines.py  test_cross_block.py  test_cumulants.py  test_edgeworth_integrals.py  test_edgeworth_optimizer.py  test_edgeworth_risk.py  test_error_analysis.py  test_gaussian_ceiling.py  test_gaussian_integrals.py  test_genome_wide_optimizer.py  test_gradients.py  test_interaction_denoising.py  test_interaction_risk.py  test_nonlinear_phenotype.py  test_optimizer.py  test_population_risk.py  test_pumas.py  test_pumas_validation.py  test_reduction_theorem.py  test_residual_gamma.py  test_simulation.py  test_spectral_interaction.py  test_utils.py
